--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body {
+  background-color: #f2f2f2;
+}
+.loader {
+    border: 16px solid white; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    animation: spin .5s linear infinite;
+}
+@keyframes spin {
+    100% { transform: rotate(360deg); }
+}
 input[type=text], select {
     height: 50px;
     width: 50%;
@@ -9,7 +23,7 @@ input[type=text], select {
     box-sizing: border-box;
 }
 select {
-  font-size: 20px;
+    font-size: 20px;
     width: 100%;
     height: 40px;
     padding-left: 20px;
@@ -18,53 +32,42 @@ select {
     border-radius: 4px;
     background-color: white;
 }
-
 input[type=submit] {
     width: 50%;
-    background-color: #4CAF50;
+    background-color: #3498db;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
-    border-radius: 4px;
     cursor: pointer;
     font-size: 20px;
-
 }
-
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #0CABE8;
 }
-
 div {
     border-radius: 5px;
-    background-color: #f2f2f2;
     padding: 20px;
 }
-
 #right{
   float: right;
 }
 #left{
   float: left;
 }
-
-#rightLabel{
+#rightLabel, #leftLabel{
   text-align: center;
 }
-#leftLabel{
-  text-align: center;
+#myLoader, #transText {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
-
 #transText {
   font-size: 30px;
 }
-
-#text{
-  font-size: 20px;
-
-}
-
-label{
+label, #text{
   font-size: 20px;
 }
