--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ input[type=text], select {
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
+    min-width: inherit;
+    min-height: inherit;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
@@ -42,7 +43,7 @@ form {
 
 input[type=submit] {
     display: inline;
-    width: 23.8%;
+    width: 24.5%;
     background-color: #3498db;
     color: white;
     padding: 14px 20px;
