--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ input[type=text], select {
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
-    min-width: inherit;
-    min-height: inherit;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
@@ -43,7 +41,7 @@ form {
 
 input[type=submit] {
     display: inline;
-    width: 24.5%;
+    width: 32.2%;
     background-color: #3498db;
     color: white;
     padding: 14px 20px;
@@ -81,4 +79,7 @@ div {
 }
 label, #text{
   font-size: 20px;
+}
+#textBox{
+  margin-top: 42px;
 }
